# aurora-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  NEWS.md  README.md  Text.cpp  Text.h
cmake/: cppcheck-download.cmake  cppcheck.cmake  cpr-download.cmake  cpr.cmake  curl-download.cmake  curl.cmake  googletest-download.cmake  googletest.cmake  json-download.cmake  json.cmake  libsndfile-download.cmake  libsndfile.cmake  portaudio-download.cmake  portaudio.cmake
examples/: CMakeLists.txt  audiofile_example.cpp  exampleutils.cpp  exampleutils.h  interpret_demo.cpp  interpret_example.cpp  listen_and_transcribe_example.cpp  record_stt_example.cpp  stt_example.cpp  tts_example.cpp
include/aurora/: API.h  AudioFile.h  Aurora.h  Backend.h  Config.h  HTTPClient.h  Interpret.h  Speech.h  Text.h  WAV.h  utils.h
include/aurora/errors/: APIError.h  AuroraError.h
src/: API.cpp  APIError.cpp  AudioFile.cpp  AuroraError.cpp  Backend.cpp  CMakeLists.txt  Config.cpp  HTTPClient.cpp  Speech.cpp  Text.cpp  WAV.cpp  utils.cpp
tests/: CMakeLists.txt  mytest.cpp  test_api.cpp  test_audiofile.cpp  test_backend.cpp  test_speech.cpp  test_text.cpp  test_utils.cpp  test_wav.cpp
tests/mocks/: mock_backend.h
